# wasm-mutate

./: .cargo_vcs_info.json  Cargo.toml  test.wasm  test.wat
src/: lib.rs  mutators.rs
src/mutators/: peephole.rs  zero_copy.rs
